@@ -1,3 +1,7 @@
+2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* configure, MonoDevelop.AddinAuthoring.addin.xml: Bump MD version.
+
 2008-05-26  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.AddinAuthoring/AddinFileDescriptionTemplate.cs: Track api
